5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1712_2499.log
== SUBMITION (2019-05-13 15:08:25) 
-- CODE:
from math import*

k= int(input("k:"))

c=0
e=0

while(k<C):
	e=e+ (1/factorial(c))
	c=c+1
	
	print(round(e,8))
-- EXECUTION TIME:
0.175678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 8, in <module>
    while(k<C):
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:08:55) 
-- CODE:
from math import*

k= int(input("k:"))

c=0
e=0

while(k>C):
	e=e+ (1/factorial(c))
	c=c+1
	
print(round(e,8))
-- EXECUTION TIME:
0.183017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 8, in <module>
    while(k>C):
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:09:04) 
-- CODE:
from math import*

k= int(input("k:"))

c=0
e=0

while(k>c):
	e=e+ (1/factorial(c))
	c=c+1
	
print(round(e,8))
-- EXECUTION TIME:
0.198471
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 11:49:53) 
-- CODE:
from math import*

k= int(input("k:"))

c=0
e=0

while(k>c):
	e=e+ (1/factorial(c))
	c=c+1
	
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 11:50:59) 
-- CODE:
from math import*

k= int(input("k:"))

c=0
e=0

while(k>c):
	e=e+ (1/factorial(c))
	c=c+1
	
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
